it is sort of working

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,35 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "67b177cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: tqdm in c:\\users\\fedor\\pycharmprojects\\asr-transformer\\venv\\lib\\site-packages (4.65.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\fedor\\pycharmprojects\\asr-transformer\\venv\\lib\\site-packages (from tqdm) (0.4.6)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip available: 22.3.1 -> 23.1.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "a660f920-4dde-43c8-b7ba-517ef76ab722",
    "metadata": {
     "execution": {
@@ -42,32 +14,46 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
     "import torchaudio\n",
     "\n",
+    "from torch.optim import AdamW\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "from torch import nn\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "import os\n",
-    "\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "import IPython\n",
-    "\n",
-    "from torch import nn\n",
-    "import torch.nn.functional as F\n",
-    "\n",
-    "from modules.dataset import AudioDataset\n",
-    "\n",
-    "from torch.utils.data import DataLoader\n",
-    "\n",
+    "from sklearn.model_selection import KFold, StratifiedKFold\n",
     "\n",
     "from transformers import PreTrainedTokenizerFast\n",
     "\n",
-    "from modules.model import Transformer\n",
-    "from modules.tokenizer import tokenize"
+    "from transformers import get_cosine_schedule_with_warmup\n",
+    "\n",
+    "from modules.model import Transformer, train_epoch, eval_epoch\n",
+    "from modules.dataset import AudioDataset\n",
+    "from modules.tokenizer import tokenize\n",
+    "\n",
+    "import random\n",
+    "import os\n",
+    "\n",
+    "torch.cuda.is_available()"
    ]
   },
   {
@@ -87,64 +73,21 @@
    "outputs": [],
    "source": [
     "path_to_tokenizer = './tokenizer.json'\n",
-    "path_to_data = './audio_dataset/'"
+    "path_to_data = './audio_dataset/'\n",
+    "\n",
+    "data = pd.read_csv(os.path.join(path_to_data,'df.csv'), usecols=['text','status','path','rate','duration','frames'])\n",
+    "data = data[data.status=='APPROVED'].reset_index(drop=True)\n",
+    "del data['status']\n",
+    "data.text = data.text.apply(lambda x: \"\".join([char for char in x if char.isalpha() or char==' ']).lower())\n",
+    "data.duration.max()\n",
+    "\n",
+    "train_data = data.iloc[:10000]\n",
+    "valid_data = data.iloc[10000:20000]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b8c2bb2d-2100-4b47-b750-d3be6e53411b",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-05-18T11:25:17.271865Z",
-     "iopub.status.busy": "2023-05-18T11:25:17.271690Z",
-     "iopub.status.idle": "2023-05-18T11:25:18.252783Z",
-     "shell.execute_reply": "2023-05-18T11:25:18.252270Z",
-     "shell.execute_reply.started": "2023-05-18T11:25:17.271851Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv(os.path.join(path_to_data,'df.csv'), usecols=['text','status','path','rate','duration','frames'])\n",
-    "data = data[data.status=='APPROVED'].reset_index(drop=True)\n",
-    "del data['status']\n",
-    "data.text = data.text.apply(lambda x: \"\".join([char for char in x if char.isalpha() or char==' ']).lower())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "b6bfd305-c08a-4c82-8758-8dc90c123a41",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-05-18T11:25:18.253386Z",
-     "iopub.status.busy": "2023-05-18T11:25:18.253246Z",
-     "iopub.status.idle": "2023-05-18T11:25:18.258324Z",
-     "shell.execute_reply": "2023-05-18T11:25:18.257915Z",
-     "shell.execute_reply.started": "2023-05-18T11:25:18.253374Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22.06"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.duration.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "9e324020-a3e7-46b8-9228-7cdf8b766904",
    "metadata": {
     "execution": {
@@ -168,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e8268447-41ef-4582-9100-4e0afb378fb7",
    "metadata": {
     "execution": {
@@ -187,7 +130,7 @@
        "135.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "1f94ee00-973a-4a23-ae2a-a0cef7807450",
    "metadata": {
     "execution": {
@@ -213,13 +156,18 @@
    "outputs": [],
    "source": [
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "tokenizer = PreTrainedTokenizerFast(tokenizer_file=path_to_tokenizer, padding_side ='right', pad_token ='[PAD]')\n",
-    "tokenizer.bos_token = '[SOS]'\n",
-    "tokenizer.eos_token = '[EOS]'\n",
-    "tokenizer.pad_token = '[PAD]'\n",
-    "tokenizer.unk_token = '[UNK]'\n",
-    "tokenizer.mask_token = \"[MASK]\"\n",
-    "dataset = AudioDataset(data, path_to_data, tokenizer, n_fft=1024, n_mels=64, center=True, max_tokenized_length=100, max_audio_len=25, sr=16000)\n",
+    "\n",
+    "tokenizer = PreTrainedTokenizerFast(tokenizer_file=path_to_tokenizer, \n",
+    "                                    padding_side ='right',\n",
+    "                                    bos_token = '[SOS]',\n",
+    "                                    eos_token = '[EOS]',\n",
+    "                                    pad_token = '[PAD]',\n",
+    "                                    unk_token = '[UNK]',\n",
+    "                                    mask_token = '[MASK]')\n",
+    "\n",
+    "\n",
+    "train_dataset = AudioDataset(train_data, path_to_data, tokenizer, n_fft=1024, n_mels=64, center=True, max_tokenized_length=100, max_audio_len=25, sr=16000)\n",
+    "valid_dataset = AudioDataset(valid_data, path_to_data, tokenizer, n_fft=1024, n_mels=64, center=True, max_tokenized_length=100, max_audio_len=25, sr=16000)\n",
     "model = Transformer(vocab_size=len(tokenizer),\n",
     "                    n_mels=64,\n",
     "                    enc_seq_len=25, \n",
@@ -230,6 +178,7 @@
     "                    num_heads=3, \n",
     "                    ff_dim=128, \n",
     "                    r_dim=100, \n",
+    "                    device=device,\n",
     "                    dropout=0.1, \n",
     "                    sr=16000, \n",
     "                    n_fft=1024)"
@@ -245,19 +194,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "a3ca5e49",
+   "execution_count": 6,
+   "id": "59d6466c",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.cuda.empty_cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a528dd09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchmetrics.functional import word_error_rate\n",
+    "from torchmetrics.functional.classification import multiclass_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8abfff92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_epoch(model, data_loader, tokenizer, loss_function, optimizer, scheduler, device):\n",
+    "    model.to(device)\n",
+    "    model.train()\n",
+    "    total_train_loss = 0\n",
+    "\n",
+    "    dl_size = len(data_loader)\n",
+    "\n",
+    "    preds = []\n",
+    "    targets = []\n",
+    "\n",
+    "    for batch in tqdm(data_loader):\n",
+    "        batch['encoded_text'] = batch['encoded_text'].to(device)\n",
+    "        batch['spectre'] = batch['spectre'].to(device)\n",
+    "        batch['ohe_text'] = batch['ohe_text'].to(device)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        logits = model(batch)\n",
+    "        \n",
+    "        pred = logits.argmax(dim=-1).to('cpu')\n",
+    "        pred = [tokenizer.decode(i) for i in pred]\n",
+    "        preds.append(pred)    \n",
+    "        targets.append(batch['text'])\n",
+    "        loss = loss_function(logits.transpose(1,2), batch['encoded_text'].squeeze())\n",
+    "        total_train_loss += loss.item()\n",
+    "        loss.backward()\n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
+    "        optimizer.step()\n",
+    "        scheduler.step()\n",
+    "        \n",
+    "    acc_t = 0\n",
+    "    wer = 0\n",
+    "    for batch in range(dl_size):\n",
+    "        acc = 0\n",
+    "        for sample in range(len(preds[batch])):\n",
+    "            acc += int(preds[batch][sample]==targets[batch][sample])\n",
+    "                       \n",
+    "        acc /= sample+1\n",
+    "        wer += word_error_rate(preds[batch], targets[batch])\n",
+    "        acc_t+=acc\n",
+    "    acc_t = acc_t / dl_size\n",
+    "    wer = wer / dl_size\n",
+    "    metrics = {\n",
+    "        \"Train Loss\": total_train_loss / dl_size,\n",
+    "        \"Train WAcc\": 1 - wer.item(),\n",
+    "        \"Train Accuracy\": acc,\n",
+    "    }\n",
+    "\n",
+    "    return metrics\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b1b1f2a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_epoch(model, data_loader,tokenizer, loss_function, device):\n",
+    "    model.to(device)\n",
+    "    model.eval()\n",
+    "    total_train_loss = 0\n",
+    "\n",
+    "    preds = []\n",
+    "    targets = []\n",
+    "\n",
+    "    dl_size = len(data_loader)\n",
+    "\n",
+    "    for batch in tqdm(data_loader):\n",
+    "        batch['encoded_text'] = batch['encoded_text'].to(device)\n",
+    "        batch['spectre'] = batch['spectre'].to(device)\n",
+    "        batch['ohe_text'] = batch['ohe_text'].to(device)\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            pred, logits = model.predict(batch,tokenizer.bos_token_id, tokenizer.eos_token_id,device)\n",
+    "            pred = [tokenizer.decode(i) for i in pred]\n",
+    "            preds.append(pred) \n",
+    "            targets.append(batch['text'])\n",
+    "\n",
+    "        loss = loss_function(logits.transpose(1, 2), batch['encoded_text'].squeeze())\n",
+    "        total_train_loss += loss.item()\n",
+    "\n",
+    "    acc_t = 0\n",
+    "    wer = 0\n",
+    "    for batch in range(dl_size):\n",
+    "        acc = 0\n",
+    "        for sample in range(len(preds[batch])):\n",
+    "            acc += int(preds[batch][sample]==targets[batch][sample])\n",
+    "                       \n",
+    "        acc /= sample+1\n",
+    "        wer += word_error_rate(preds[batch], targets[batch])\n",
+    "        acc_t+=acc\n",
+    "    acc_t = acc_t/dl_size\n",
+    "    wer = wer / (dl_size)\n",
+    "    metrics = {\n",
+    "        \"Val Loss\": total_train_loss / dl_size,\n",
+    "        \"Val WAcc\": 1-wer.item(),\n",
+    "        \"Val Accuracy\": acc,\n",
+    "    }\n",
+    "\n",
+    "    return metrics, preds[-1][-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d2bab8a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cross_validation(model, \n",
+    "                     dataset, \n",
+    "                     loss_function,\n",
+    "                     strat_array=None,\n",
+    "                     device=torch.device(\"cuda\"),\n",
+    "                     random_state: int=69, \n",
+    "                     shuffle: bool=True, \n",
+    "                     n_folds: int=10, \n",
+    "                     epochs: int=5, \n",
+    "                     lr: float=1e-6,\n",
+    "                     start_fold: int=0, \n",
+    "                     batch_size: int=4,\n",
+    "                     iters_to_accumulate=None,\n",
+    "                     n_accumulated_grads: int = 0):\n",
+    "    random.seed(random_state),\n",
+    "    np.random.seed(random_state)\n",
+    "    torch.manual_seed(random_state)\n",
+    "    torch.cuda.manual_seed_all(random_state)\n",
+    "    \n",
+    "    loss_function.to(device)\n",
+    "    if strat_array:\n",
+    "        kfold = StratifiedKFold(n_folds, shuffle=shuffle, random_state=random_state)\n",
+    "        split = kfold.split(dataset, strat_array)\n",
+    "    else: \n",
+    "        kfold = KFold(n_folds, shuffle=shuffle, random_state=random_state)\n",
+    "        split = kfold.split(dataset)\n",
+    "\n",
+    "    for fold, (train_ids, eval_ids) in enumerate(split):\n",
+    "        if fold >= start_fold:\n",
+    "            print(f'FOLD {fold}')\n",
+    "            print('--------------------------------')\n",
+    "\n",
+    "            optimizer = AdamW(\n",
+    "            model.parameters(),\n",
+    "            #lr = lr,\n",
+    "        )\n",
+    "\n",
+    "            train_subsampler = torch.utils.data.Subset(dataset,  train_ids)\n",
+    "            train_loader = torch.utils.data.DataLoader(\n",
+    "                          train_subsampler, \n",
+    "                          batch_size=batch_size,\n",
+    "                          shuffle=shuffle, drop_last=True)\n",
+    "\n",
+    "            eval_subsampler = torch.utils.data.Subset(dataset,  eval_ids)\n",
+    "            eval_loader = torch.utils.data.DataLoader(\n",
+    "                          eval_subsampler,\n",
+    "                          batch_size=batch_size,\n",
+    "                          shuffle=shuffle, drop_last=True)\n",
+    "            \n",
+    "            total_steps = len(train_loader) * epochs \n",
+    "\n",
+    "            scheduler = get_cosine_schedule_with_warmup(optimizer, \n",
+    "                                                    num_warmup_steps = 0, # Default value in run_glue.py\n",
+    "                                                    num_training_steps = total_steps)\n",
+    "\n",
+    "\n",
+    "            for epoch_i in range(epochs):\n",
+    "                train_metrics = train_epoch(model, train_loader, dataset.tokenizer, loss_function, optimizer, scheduler, device)\n",
+    "                eval_metrics, preds = eval_epoch(model, eval_loader, dataset.tokenizer, loss_function, device)\n",
+    "                print(f\"EPOCH: {epoch_i}\")\n",
+    "                print(train_metrics)\n",
+    "                print(eval_metrics) \n",
+    "                print(preds) \n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ea58bf03",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FOLD 0\n",
+      "--------------------------------\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0173ca396ef441b083f641b26c3912a2",
+       "model_id": "ecae7d9001704733a83fa0c06adb5622",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "0it [00:00, ?it/s]"
+       "  0%|          | 0/562 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f417881462cf4b64a9e7820804297b80",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/62 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -267,18 +443,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[SOS] [EOS] [SOS] [EOS] [PAD] [PAD] [PAD] [EOS] [PAD] [EOS] [PAD] [PAD] [PAD] [PAD] [PAD] [SOS] [PAD] [PAD] [EOS] [EOS] [PAD] [EOS] [PAD] [EOS] [SOS] [EOS] [PAD] ñ [SOS] [EOS] [PAD] [EOS] w [SOS] w w ß ã [EOS] ä è ê w è ñ [EOS] ä ã [EOS] è ñ [SOS] [SOS] ä ä è è ä ã ò w w ő ß ã ß ß [PAD] ő w ж ж ê [EOS] ß ä ő [PAD] w è [SOS] ж ã ä [EOS] ê ê [PAD] ß ő ß ã w é w [PAD] ư ж э ò\n"
+      "EPOCH: 0\n",
+      "{'Train Loss': 1.161193019236534, 'Train WAcc': -6.985538482666016, 'Train Accuracy': 0.0}\n",
+      "{'Val Loss': 30.14263423796623, 'Val WAcc': -7.106573104858398, 'Val Accuracy': 0.0}\n",
+      "[SOS] [SOS] [UNK] [MASK] [MASK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] ª [MASK] à [MASK] â ã ä ã ã ã ã ã ã ã ã ã ð ã ã ã ã ã ã ã ã ª ã ã ã ã ã ư ã ã ª ä ư ã à ж ã ä à ª â à ã ä ư ư [SOS] ã [SOS] ð ã à ã ã ä [UNK] ж à à ã ã ª ã [UNK] ª\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7a4b8bc578644e6d83e67c6ca214f1bb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/562 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cfa4dca0ae144d789afb4e9fa1d59391",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/62 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "dataloader = DataLoader(dataset, batch_size=1,\n",
-    "                        shuffle=True, num_workers=0)\n",
-    "for i_batch, sample_batched in tqdm(enumerate(dataloader)):\n",
-    "    padded_input = model.predict(sample_batched, tokenizer.bos_token_id, tokenizer.eos_token_id)\n",
-    "    print(tokenizer.decode(padded_input.squeeze()))\n",
-    "    break"
+    "cross_validation(model = model,\n",
+    "                 dataset=train_dataset, \n",
+    "                 loss_function=nn.CrossEntropyLoss(), \n",
+    "                 device=torch.device(\"cuda\"),\n",
+    "                 random_state=69,\n",
+    "                 shuffle=True,\n",
+    "                 batch_size=16)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "368035c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
