first working prototype, needs to be trained

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a660f920-4dde-43c8-b7ba-517ef76ab722",
    "metadata": {
     "execution": {
@@ -14,18 +14,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torchaudio\n",
@@ -53,12 +42,15 @@
     "import random\n",
     "import os\n",
     "\n",
+    "\n",
+    "import wandb\n",
+    "\n",
     "torch.cuda.is_available()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a553996c-2adf-44b8-a894-a1f6a2ceb5a2",
    "metadata": {
     "execution": {
@@ -81,13 +73,13 @@
     "data.text = data.text.apply(lambda x: \"\".join([char for char in x if char.isalpha() or char==' ']).lower())\n",
     "data.duration.max()\n",
     "\n",
-    "train_data = data.iloc[:3000]\n",
+    "train_data = data.iloc[:10000]\n",
     "valid_data = data.iloc[70000:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9e324020-a3e7-46b8-9228-7cdf8b766904",
    "metadata": {
     "execution": {
@@ -111,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e8268447-41ef-4582-9100-4e0afb378fb7",
    "metadata": {
     "execution": {
@@ -123,25 +115,14 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "135.0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.percentile(data.text.str.len(), 99.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e94db526",
    "metadata": {},
    "outputs": [],
@@ -153,12 +134,12 @@
     "    classname = m.__class__.__name__\n",
     "\n",
     "    if classname.find('Linear') != -1:\n",
-    "        torch.nn.init.xavier_uniform(m.weight)"
+    "        torch.nn.init.xavier_uniform_(m.weight)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1f94ee00-973a-4a23-ae2a-a0cef7807450",
    "metadata": {
     "execution": {
@@ -171,115 +152,7 @@
     "scrolled": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1563 128\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fedor\\AppData\\Local\\Temp\\ipykernel_3640\\1102778910.py:8: UserWarning: nn.init.xavier_uniform is now deprecated in favor of nn.init.xavier_uniform_.\n",
-      "  torch.nn.init.xavier_uniform(m.weight)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Transformer(\n",
-       "  (vgg): Sequential(\n",
-       "    (0): Conv2d(1, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (1): ReLU()\n",
-       "    (2): Conv2d(16, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (3): ReLU()\n",
-       "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "    (5): Conv2d(16, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (6): ReLU()\n",
-       "    (7): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (8): ReLU()\n",
-       "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "  )\n",
-       "  (encoder): Encoder(\n",
-       "    (lin_in): Linear(in_features=128, out_features=128, bias=True)\n",
-       "    (norm_in): LayerNorm((128,), eps=1e-05, elementwise_affine=True)\n",
-       "    (pe): TrainablePositionalEncoding()\n",
-       "    (layers): ModuleList(\n",
-       "      (0-1): 2 x EncoderLayer(\n",
-       "        (attention): MHA(\n",
-       "          (query_linear): Linear(in_features=128, out_features=384, bias=True)\n",
-       "          (key_linear): Linear(in_features=128, out_features=384, bias=True)\n",
-       "          (value_linear): Linear(in_features=128, out_features=384, bias=True)\n",
-       "          (attention): ScaledDotProductAttention(\n",
-       "            (dropout): Dropout(p=0.1, inplace=False)\n",
-       "            (softmax): Softmax(dim=2)\n",
-       "          )\n",
-       "          (layer_norm): LayerNorm((128,), eps=1e-05, elementwise_affine=True)\n",
-       "          (output_linear): Linear(in_features=384, out_features=128, bias=True)\n",
-       "          (dropout): Dropout(p=0.1, inplace=False)\n",
-       "        )\n",
-       "        (norm1): LayerNorm((128,), eps=1e-05, elementwise_affine=True)\n",
-       "        (ff): FeedForward(\n",
-       "          (squeeze): Linear(in_features=128, out_features=128, bias=True)\n",
-       "          (ReLU): ReLU()\n",
-       "          (unsqueeze): Linear(in_features=128, out_features=128, bias=True)\n",
-       "        )\n",
-       "        (norm2): LayerNorm((128,), eps=1e-05, elementwise_affine=True)\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       "  (decoder): Decoder(\n",
-       "    (emb): Embedding(250, 128, padding_idx=4)\n",
-       "    (pe): TrainablePositionalEncoding()\n",
-       "    (layers): ModuleList(\n",
-       "      (0-1): 2 x DecoderLayer(\n",
-       "        (mask_attention): MHA(\n",
-       "          (query_linear): Linear(in_features=128, out_features=384, bias=True)\n",
-       "          (key_linear): Linear(in_features=128, out_features=384, bias=True)\n",
-       "          (value_linear): Linear(in_features=128, out_features=384, bias=True)\n",
-       "          (attention): ScaledDotProductAttention(\n",
-       "            (dropout): Dropout(p=0.1, inplace=False)\n",
-       "            (softmax): Softmax(dim=2)\n",
-       "          )\n",
-       "          (layer_norm): LayerNorm((128,), eps=1e-05, elementwise_affine=True)\n",
-       "          (output_linear): Linear(in_features=384, out_features=128, bias=True)\n",
-       "          (dropout): Dropout(p=0.1, inplace=False)\n",
-       "        )\n",
-       "        (norm1): LayerNorm((128,), eps=1e-05, elementwise_affine=True)\n",
-       "        (attention): MHA(\n",
-       "          (query_linear): Linear(in_features=128, out_features=384, bias=True)\n",
-       "          (key_linear): Linear(in_features=128, out_features=384, bias=True)\n",
-       "          (value_linear): Linear(in_features=128, out_features=384, bias=True)\n",
-       "          (attention): ScaledDotProductAttention(\n",
-       "            (dropout): Dropout(p=0.1, inplace=False)\n",
-       "            (softmax): Softmax(dim=2)\n",
-       "          )\n",
-       "          (layer_norm): LayerNorm((128,), eps=1e-05, elementwise_affine=True)\n",
-       "          (output_linear): Linear(in_features=384, out_features=128, bias=True)\n",
-       "          (dropout): Dropout(p=0.1, inplace=False)\n",
-       "        )\n",
-       "        (norm2): LayerNorm((128,), eps=1e-05, elementwise_affine=True)\n",
-       "        (ff): FeedForward(\n",
-       "          (squeeze): Linear(in_features=128, out_features=128, bias=True)\n",
-       "          (ReLU): ReLU()\n",
-       "          (unsqueeze): Linear(in_features=128, out_features=128, bias=True)\n",
-       "        )\n",
-       "        (norm3): LayerNorm((128,), eps=1e-05, elementwise_affine=True)\n",
-       "      )\n",
-       "    )\n",
-       "    (classifier): Linear(in_features=128, out_features=250, bias=False)\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
@@ -293,7 +166,7 @@
     "\n",
     "\n",
     "train_dataset = AudioDataset(train_data, path_to_data, tokenizer, \n",
-    "                             n_fft=512, \n",
+    "                             n_fft=512,\n",
     "                             n_mels=128, \n",
     "                             center=True, \n",
     "                             max_tokenized_length=100, \n",
@@ -336,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "59d6466c",
    "metadata": {},
    "outputs": [],
@@ -346,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "94544c7b",
    "metadata": {},
    "outputs": [],
@@ -357,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d2bab8a7",
    "metadata": {},
    "outputs": [],
@@ -370,8 +243,8 @@
     "                     random_state: int=69, \n",
     "                     shuffle: bool=True, \n",
     "                     n_folds: int=10, \n",
-    "                     epochs: int=10, \n",
-    "                     lr: float=1e-6,\n",
+    "                     epochs: int=5, \n",
+    "                     lr: float=1e-3,\n",
     "                     start_fold: int=0, \n",
     "                     batch_size: int=4,\n",
     "                     iters_to_accumulate=None,\n",
@@ -393,10 +266,21 @@
     "        if fold >= start_fold:\n",
     "            print(f'FOLD {fold}')\n",
     "            print('--------------------------------')\n",
+    "            run = wandb.init(\n",
+    "                name=f\"fold_{fold}\",\n",
+    "                project=f\"asr_fold_{fold}\",\n",
+    "                config={ \n",
+    "                         \"random_state\": random_state, \n",
+    "                         \"shuffle\": shuffle,\n",
+    "                         \"epochs\": epochs, \n",
+    "                         \"learning_rate\": lr,\n",
+    "                         \"batch_size\": batch_size,\n",
+    "                         \"iters_to_accumulate\": iters_to_accumulate\n",
+    "                        })\n",
     "\n",
-    "            optimizer = AdamW(\n",
-    "            model.parameters(),\n",
-    "            lr = 4e-2,\n",
+    "            optimizer = AdamW(model.parameters(), lr=lr\n",
+    "#                 [{\"params\": model.encoder.parameters(), \"lr\": 1e-4},\n",
+    "#                 {\"params\": model.decoder.parameters(), \"lr\": 1e-3},]\n",
     "        )\n",
     "\n",
     "            train_subsampler = torch.utils.data.Subset(dataset,  train_ids)\n",
@@ -426,34 +310,19 @@
     "                print(eval_metrics)\n",
     "                print(t_preds)\n",
     "                print(preds)\n",
+    "                run.log(train_metrics)\n",
+    "                run.log(eval_metrics)\n",
+    "                            \n",
+    "            run.finish()\n",
     "        break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a8a6081",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "id": "04d83303",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'я люблю дашу'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "string = tokenizer.encode(\"я люблю дашу\")\n",
     "tokenizer.decode(string, skip_special_tokens=True)"
@@ -461,85 +330,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "92943ea2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'l'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenizer.decode(16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e67efaf2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fedor\\PycharmProjects\\asr-transformer\\venv\\lib\\site-packages\\torchaudio\\functional\\functional.py:576: UserWarning: At least one mel filterbank has all zero values. The value for `n_mels` (128) may be set too high. Or, the value for `n_freqs` (257) may be set too low.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([  1,  79, 114,  69, 199,  81, 208, 188, 105, 202,  66, 220, 179,  88,\n",
-       "        186, 102, 205, 220, 124, 111, 214,  77,  65,  64,  77,  74, 101, 209,\n",
-       "         81, 178, 220, 107, 104, 209, 205,  68, 201,  69, 105,  79, 212, 191,\n",
-       "         70,  69, 102, 223,  65,  91,  75, 114,   2,   2,   2,   2,   2,   2,\n",
-       "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
-       "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
-       "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
-       "          2,   2])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_dataset[0]['encoded_text']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3bfb3b96",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 79, 114,  69, 199,  81, 208, 188, 105, 202,  66, 220, 179,  88, 186,\n",
-       "        102, 205, 220, 124, 111, 214,  77,  65,  64,  77,  74, 101, 209,  81,\n",
-       "        178, 220, 107, 104, 209, 205,  68, 201,  69, 105,  79, 212, 191,  70,\n",
-       "         69, 102, 223,  65,  91,  75, 114,   2,   4,   4,   4,   4,   4,   4,\n",
-       "          4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,\n",
-       "          4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,\n",
-       "          4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,\n",
-       "          4,   4])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_dataset[0]['true_text']"
    ]
@@ -551,108 +365,7 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FOLD 0\n",
-      "--------------------------------\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0747826ace1342c7a7c062314ebdd056",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/168 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8be6e054a2bd446fbdb98ebce2e4fe78",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/18 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EPOCH: 0\n",
-      "{'Train Loss': 4.788388433910551, 'Train Word Accuracy': -0.13486027717590332, 'Train Accuracy': 0.0}\n",
-      "{'Val Loss': 4.725820541381836, 'Val Word Accuracy': 0.0, 'Val Accuracy': 0.0}\n",
-      "ссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссс\n",
-      "сссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссс\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be79e1697f3a483bb14039a6ecde33c4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/168 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f952f187ecd45d6aa916111e4dab509",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/18 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EPOCH: 1\n",
-      "{'Train Loss': 4.694956132343838, 'Train Word Accuracy': 0.0, 'Train Accuracy': 0.0}\n",
-      "{'Val Loss': 4.714163011974758, 'Val Word Accuracy': 0.0, 'Val Accuracy': 0.0}\n",
-      "ссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссс\n",
-      "сссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссс\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b5ee376e53d4816ac4634934bd1b7ec",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/168 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cross_validation(model = model,\n",
     "                 dataset=train_dataset, \n",
